[package]
name = "post-notes"
description = "Building a cute digital garden."
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "fs",
] }
tokio-macros = "2"
tokio-stream = "0.1"
anyhow = "1.0"
regex = "1.11"
colog = "1.3"
comrak = "0.41"
config = "0.15"
clap = "4.5"
tera = "1.20"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
derive_more = { version = "2.0", features = ["display"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
